fault with no condition

--- a/templates/config-wb-mao4-20ma.json.jinja
+++ b/templates/config-wb-mao4-20ma.json.jinja
@@ -583,8 +583,7 @@
                 "address": {{16 + index}},
                 "type": "switch",
                 "sporadic": true,
-                "group": "gg_output_{{index + 1}}_channels",
-                "condition": "output_{{index + 1}}_mode==1||output{{index + 1}}_min>=4"
+                "group": "gg_output_{{index + 1}}_channels"
             },
             {
                 "name": "Channel {{index + 1}} Duty Cycle Raw",
