--- a/templates/config-kaplestop.json.jinja
+++ b/templates/config-kaplestop.json.jinja
@@ -1,11 +1,11 @@
 {# Определение переменных для формирования шаблона -#}
 
-{% set title_en = title_en | default("SDM-KapleStop v.4.12") -%}
-{% set title_ru = title_ru | default("SDM-KapleStop v.4.12") -%}
-{% set device_type = device_type | default("KapleStop") -%}
-{% set group = group | default("g-leakage") -%}
-{% set device_name = device_name | default("KapleStop") -%}
-{% set device_id = device_id | default("kaplestop") -%}
+{% set title_en = "SDM-KapleStop v.4.12" -%}
+{% set title_ru = "SDM-KapleStop v.4.12" -%}
+{% set device_type = "KapleStop" -%}
+{% set group = "g-leakage" -%}
+{% set device_name = "KapleStop" -%}
+{% set device_id = "kaplestop" -%}
 
 {% set CHANNELS_NUMBER = 10 -%}
 {% set OUTPUTS_NUMBER = 4 -%}
