--- a/templates/config-kaplestop.json.jinja
+++ b/templates/config-kaplestop.json.jinja
@@ -92,6 +92,7 @@
             },
             "ru": {
                 "template_title": "{{ title_ru }}",
+                "Chain sensors": "Цепочка датчиков",
                 "Actions when sensor is triggered": "Действия при срабатывании датчика",
                 "Outputs": "Выходы",
                 "№ zone":"№ зоны",
